Remove some ugly rxjava code and use streams implementation instead